# secoder-backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md
docs/: AGENTS.md
src/: allowlist.rs  config.rs  db.rs  entity.rs  error.rs  kubernetes.rs  main.rs  metrics.rs  security.rs  test.rs  view.rs
src/entity/: admin.rs  group.rs  invite.rs  join.rs  member.rs  user.rs  user_access.rs
src/metrics/: group.rs  invite.rs  user.rs
src/view/: admin.rs  auth.rs  group.rs  groups.rs  health.rs  oauth.rs  rbac.rs  user.rs  users.rs
