[package]
authors = ["Xuelin Yang <xuelin@adamanteye.cc>"]
description = "secoder backend"
edition = "2024"
license = "MIT"
name = "secoder"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { features = ["derive"], version = "4" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
base64 = "0.22"
url = "2"
kube = { version = "3", features = ["client", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_35"] }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
