[package]
edition = "2024"
license = "MIT"
name = "secoder"
publish = false
version = "0.1.1"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.6.0-rc.8", features = ["password-hash"] }
axum = "0.8.9"
clap = { features = ["derive"], version = "4.6.1" }
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.150"
jsonwebtoken = "10.4.0"
uuid = { version = "1.23.4", features = ["v4"] }
tower-http = { version = "0.7.0", features = ["cors", "normalize-path"] }
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sea-orm = { version = "2.0.0-rc.41", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
base64 = "0.22.1"
url = "2.5.8"
kube = { version = "4.0.0", features = ["client", "derive"] }
k8s-openapi = { version = "0.28.0", features = ["v1_36"] }
hex = "0.4.3"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.3"
